src/objects/trailheadapp__Trailhead_User_Data__c.object
<CustomObject>
    <fields>
        <fullName>trailheadapp__Avatar__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Avatar</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>trailheadapp__External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Profile_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Profile_Visibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile_Visibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Rank__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Total_Points__c</fullName>
        <label>Total_Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trailheadapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trailhead_Users_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trailhead User Data</label>
    <listViews>
        <fullName>trailheadapp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Trailhead User Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Users Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>